# smalltoslide

./: .gitignore  README.md  climate_youth_llamaparse.md  llamaparse.md  milvus-ingest.ipynb
app/backend/colpali/: app.py  ct2021.ipynb  ct2021questions.txt  nvda.ipynb  nvdaquestions.txt  pali.ipynb  pyproject.toml  questions1.txt  questions2.txt  questions3.txt  youth-climate-colpali-results.txt
app/backend/colpali/demos/: github.py
app/smalltoslide/: next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml
app/smalltoslide/app/: globals.css  layout.tsx  page.tsx
app/smalltoslide/app/api/data/: route.ts
app/smalltoslide/common/: types.ts
app/smalltoslide/components/section/: result.tsx
app/smalltoslide/rag/: getChunks.ts  queryToChunk.ts  query_to_chunk.ts  synthPrompt.ts  types.ts  zilliz_embedding_engine.ts
manual/: embed.mjs  nvda-embeddings.json  nvda.md  package.json  pnpm-lock.yaml  query.mjs
rag_backend/: README.md  eslint.config.mjs  package.json  pnpm-lock.yaml
